fix mistakes in cnn chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -286,6 +286,25 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-1807-11626.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
+@article{netadapt,
+  author     = {Tien{-}Ju Yang and
+                Andrew G. Howard and
+                Bo Chen and
+                Xiao Zhang and
+                Alec Go and
+                Vivienne Sze and
+                Hartwig Adam},
+  title      = {NetAdapt: Platform-Aware Neural Network Adaptation for Mobile Applications},
+  journal    = {CoRR},
+  volume     = {abs/1804.03230},
+  year       = {2018},
+  url        = {http://arxiv.org/abs/1804.03230},
+  eprinttype = {arXiv},
+  eprint     = {1804.03230},
+  timestamp  = {Thu, 27 May 2021 16:20:51 +0200},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-1804-03230.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
 @misc{squeeze_and_excitation_website,
   title   = {Squeeze and Excitation Networks Explained with PyTorch Implementation},
   url     = {https://amaarora.github.io/2020/07/24/SeNet.html},
