fix some mistakes

--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -15,7 +15,7 @@
 презентацію навчального матеріалу, яка містить лише текст з дошки,
 оскільки це більш наближено до формату конспекту.
 
-Метою роботи є створення інформаційної технології, якф з відео лекції
+Метою роботи є створення інформаційної технології, яка з відео лекції
 зможе створити панорамні слайди без викладача.
 
 Для досягнення мети було використано:
