--- a/7_panorama/1_preface.tex
+++ b/7_panorama/1_preface.tex
@@ -1,3 +1,3 @@
 У четвертому розділі описується пошук відповідності між кадрами,
-матриці гомографії, та створення кінцевого панорамного
+матриця гомографії, та створення панорамного
 знімку без викладача.
