--- a/index.tex
+++ b/index.tex
@@ -67,7 +67,8 @@
 \import{5_problem/}{main.tex}
 \import{6_mask/}{main.tex}
 \import{7_panorama/}{main.tex}
-\import{8_results/}{main.tex}
+\import{8_slides/}{main.tex}
+\import{9_results/}{main.tex}
 
 
 % \clearpage
