--- a/6_mask/5_conclusion.tex
+++ b/6_mask/5_conclusion.tex
@@ -6,6 +6,6 @@
 як спосіб детектування людини. 
 Описано архітектури, переваги та недоліки кожної 
 згорткової мережі.
-Дані методи є досить швидкими, щоб 
-створювати інформаційну технологію побудови слайдів на 
+Дані методи підходять для
+створення інформаційної технології побудови слайдів на 
 мобільних пристроях.
