--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -12,40 +12,43 @@
 між точками дошки на різних зображеннях можна за допомогою гомографії.
 Рухи камери під час лекції можуть змінюватися від незначних
 субпіксельних зсувів до зміщень, в результаті яких видимою стає частина
-дошки, яка до цього була прихованою. Наша мета -- зробити слайди, де
+дошки, яка до цього була прихованою. Наша мета ~---~ зробити слайди, де
 камера виглядає статичною, а сегменти дошки поступово стають видимими та
 поєднуються для утворення панорами.
-
-Ми можемо використовувати дескриптори ознак, такі як SIFT, SURF або ORB,
-щоб знайти ключові точки (feature points / keypoints). Був обраний SIFT, оскільки під час
-експериментів він надав візуально кращі результати, ніж інші алгоритми.
-
 
 \subsection{SIFT}
 
 У 1999 році англієць Девід Лоу представив алгоритм SIFT (Scale-invariant feature transform)
-\cite{sift}, (укр. \textit{масштабозалежне перетворення ознак}). Даний алгоритм
-застовується для знаходження ключових точок (локальних ознак) зображення. Метод досить точно
-і швидко знаходить дані точки.
+\cite{sift} (укр. масштабонезалежне перетворення ознак). Даний алгоритм
+застовується для знаходження ключових точок (локальних ознак) (англ. feature points/keypoints) зображення. 
+Метод досить точно і швидко знаходить дані точки.
 Головною перевагою алгоритму є інваріантність щодо просторової орієнтації та якості освітлення.
 Має широке застосування в області комп'ютерного зору як один з кроків для побудови 3D-карт,
 ректифікації стереопари та детектингу об'єктів.
 
+Ми можемо також використовувати дескриптори ознак, такі як SURF \cite{surf} або ORB \cite{orb}, 
+щоб знайти ключові точки. Був обраний SIFT, 
+оскільки під час експериментів він надав візуально кращі результати, ніж 
+інші алгоритми.
+
 Коротко розпишемо структуру алгоритму.
 
 \begin{enumerate}
-    \item \textbf{Пошук масштабно-просторових екстремумів.}\\
+    \item Пошук масштабно-просторових екстремумів.
           На даному етапі потрібно знайти зони зображення та такі масштаби, які можна повторно
-          знайти при різних перспективах(точок погляду). Тут використовується просторово та
-          масштабно інваріантне ядро оператора ґауса з операцією згортки
-          до зображення $L(x,y,\sigma) = G(x,y,\sigma) \ast I(x,y)$,
-          де $G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2})$.
-
-
-          Будується різниця ґаусіан (DoG метод) (Рис. \ref{fig:swift1}) з константою $k$:
-
+          знайти при різних перспективах (точок погляду). Тут використовується просторове та
+          масштабно інваріантне ядро оператора ґауса з операцією згортки 
+          до зображення 
           \begin{equation*}
-              D(x,y,\sigma) = (L(x,y,k\sigma) - L(x,y,\sigma))
+              L(x,y,\sigma) = G(x,y,\sigma) \ast I(x,y),
+          \end{equation*}
+          де 
+          \begin{equation*}
+              G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2}).
+          \end{equation*}
+          Будується різниця ґаусіан (DoG метод) (Рис. \ref{fig:swift1}) з константою $k$
+          \begin{equation*}
+              D(x,y,\sigma) = (L(x,y,k\sigma) - L(x,y,\sigma)).
           \end{equation*}
 
           Тобто початкове зображення поступово піддається згорткам ґаусіанів з константою
@@ -53,7 +56,7 @@
           де $s$ число, що показує на скільки інтервалів розділити кожну епоху.
           В стеку однієї епохи зберігається $s+3$ зображень. Коли епоха завершиться, то
           створюється нове ґаусове зображення з двох найвищих в стеку,
-          взяттям кожного 2-го пікселя рядка і колонки.
+          взяттям кожного 2-го пікселя рядка та колонки.
 
           \begin{figure}[H]
               \centering
@@ -63,10 +66,10 @@
               }
           \end{figure}
 
-          \subitem \textbf{Пошук локальних екстремумів} \\
-          Для знаходження локальних екстремумів (Рис. \ref{fig:swift2}) зображення
-          різниці ґаусіан якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення
-          різниць зверху та знизу. Точка є екстремум якщо вона значення її більше або менше за
+          \subitem Пошук локальних екстремумів. Для знаходження локальних екстремумів 
+          (Рис. \ref{fig:swift2}) зображення
+          різниці ґаусіан якоїсь точки, беруться 8 сусідів цього ж зображення і 9 зображення
+          різниць зверху та знизу. Точка є екстремумом, якщо її значення більше або менше за
           значення всіх її сусідів.
 
           \begin{figure}[H]
@@ -77,28 +80,27 @@
               }
           \end{figure}
 
-          \subitem \textbf{Частота вибірки по масштабу.} \\
-          Тут автор обґрунтовує кількість того, скільки разів потрібно робити
-          зміну масштабу зображення. Експерименти показують (Рис. \ref{fig:swift3}),
+          \subitem Частота вибірки по масштабу. Тут автор обґрунтовує кількість того, 
+          скільки разів потрібно робити зміну масштабу зображення. 
+          Експерименти показують (Рис. \ref{fig:swift3}),
           що на даному етапі метод дає велику кількість кандидатів екстремумів,
-          і що це дуже важко обрахувати їх всі.
+          і що дуже важко обрахувати їх всі.
 
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.4\textwidth]{images/sift3}
               \caption{Графік залежності кількості змін масштабу на кожну епоху до
-                  кількості ключових точок на зображенні  \cite{sift}
+                  кількості ключових точок на зображенні \cite{sift}
                   \label{fig:swift3}
               }
           \end{figure}
-
-          \subitem \textbf{Частота вибірки по простору.} \\
-          Пропонується використовувати оптимальне значення $\sigma = 1.6$ при якому
+          \subitem Частота вибірки по простору. Пропонується використовувати оптимальне значення 
+          $\sigma = 1.6$ при якому
           маємо найбільший відсоток збігів екстремумів при багаторазовому повторенні
           експерименту.
 
-    \item \textbf{Точна локалізація ключових точок.} \\
-          Після знаходження точок-кандидатів потрібно відсіяти точки зі слабким контрастом на основі
+    \item Точна локалізація ключових точок. Після знаходження точок-кандидатів потрібно 
+          відсіяти точки зі слабким контрастом на основі
           інформації масштабів та відношення головних викривлень. Для цього застосовується розклад
           Тейлора масштабно-просторової функції $D(x,y,\sigma)$ в точці $\textbf{x} = (x,y,\sigma)$.
           \begin{equation}
@@ -109,13 +111,13 @@
           Місце де знаходиться екстремум $\widehat{\textbf{x}}$:
           \begin{equation}
               \widehat{\textbf{x}} = \frac{\partial^2 D^{-1} }{\partial
-                  \textbf{x}^2}\frac{\partial D }{\partial \textbf{x}}
+                  \textbf{x}^2}\frac{\partial D }{\partial \textbf{x}}.
               \label{eq:extremum}
           \end{equation}
-          Підставивши \ref{eq:extremum} у  \ref{eq:tailor_1}, маємо можливість відсіяти нестабільні
-          екстремуми по модулю значення (Рис. \ref{fig:sift45}):
+          Підставивши \ref{eq:extremum} у \ref{eq:tailor_1}, маємо можливість відсіяти нестабільні
+          екстремуми по модулю значення (Рис. \ref{fig:sift45})
           \begin{equation*}
-              D(\widehat{\textbf{x}}) = D + \frac{1}{2}\frac{\partial D^{T} }{\partial \textbf{x}}\widehat{\textbf{x}}
+              D(\widehat{\textbf{x}}) = D + \frac{1}{2}\frac{\partial D^{T} }{\partial \textbf{x}}\widehat{\textbf{x}}.
           \end{equation*}
 
           \begin{figure}[H]
@@ -139,23 +141,23 @@
                   \label{fig:sift45}
               }
           \end{figure}
-          Тобто обмежуючи $|D(\widehat{\textbf{x}})| < \alpha$.
+          Тобто ми обмежуємо $|D(\widehat{\textbf{x}})| < \alpha$.
           Якщо кожен піксель в діапазоні $[0,1]$, то і
           $ \alpha \in [0,1]$.
-    \item \textbf{Визначення орієнтації градієнтів.} \\
+    \item Визначення орієнтації градієнтів. 
           До кожної точки визначається декілька орієнтацій градієнтів.
           Магнітуда градієнта по сусідам $m(x,y)$ та його орієнтація $\theta(x,y)$:
           \begin{equation*}
-              m(x,y) = \sqrt{(L(x+1,y) - L(x-1,y))^2 + (L(x,y+1) - L(x,y-1))^2}
+              m(x,y) = \sqrt{(L(x+1,y) - L(x-1,y))^2 + (L(x,y+1) - L(x,y-1))^2},
           \end{equation*}
           \begin{equation*}
-              \theta(x,y) = \tan^{-1} (L(x,y+1) - L(x,y-1))/(L(x+1,y) - L(x-1,y))
+              \theta(x,y) = \tan^{-1} (L(x,y+1) - L(x,y-1))/(L(x+1,y) - L(x-1,y)),
           \end{equation*}
-          , де $L(x,y)$ - значення згладженого ґаусового зображення з найближчим масштабом.
+          де $L(x,y)$ - значення згладженого ґаусового зображення з найближчим масштабом.
 
-    \item \textbf{Дескриптор точок.} \\
+    \item Дескриптор точок. 
           Локальні градієнти обчислюються для кожного масштабу навколо кожної ключової точки.
-          Створюються дескриптори кожної ключової точки.
+          На рис. \ref{fig:swift6} наведено створення дескрипторів кожної ключової точки.
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.5\textwidth]{images/sift6}
@@ -173,15 +175,15 @@
 \(p_{j}^{i} \in R^{2} \times \left\{ 1 \right\}\) -- координата пікселя
 \(p\) на кадрі номер \(i\),
 \(p_{j}^{i + s} \in R^{2} \times \left\{ 1 \right\}\) -- відповідна їй
-координата на кадрі номер \(i + s\). Відповідними точками є ті, що є
+координата на кадрі номеру \(i + s\). Відповідними точками є ті, що є
 проекціями однієї і тієї ж точки у просторі.
 
 Нехай $D^i$ та $D^{i+s}$ множина дескрипторів кадрів \(F^{i}\) та \(F^{i + s}\)
-відповідно. Мета - отримати \(M^{i,i+s}\) множину усіх знайдених відповідних точок  між кадрами
+відповідно. Мета ~---~ отримати множину \(M^{i,i+s}\) усіх знайдених відповідних точок  між кадрами
 \(F^{i}\) і \(F^{i + s}\).
 
 
-Був використаний \textbf{Brute Force Matcher} для знаходження відповідних точок.
+Brute Force Matcher був використаний для знаходження відповідних точок.
 \begin{algorithm}[H]
     \caption{Алгоритм Brute Force Matcher}
     \begin{algorithmic}
