--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -1,6 +1,6 @@
 \section{Знаходження гомографії за допомогою RANSAC}
 
-Гомографія - матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні.
+Гомографія ~---~ матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні.
 
 \begin{equation}
     H =
@@ -17,23 +17,17 @@
     \label{eq:h_connection}
 \end{equation}
 Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої гомографії
-\(H^{i}\). Цю матрицю можна використовувати для компенсації руху камери
--- ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
+\(H^{i}\). Цю матрицю можна використати для компенсації руху камери
+~---~ ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
 чого точки зображення, отриманого в результаті перетворення, мають ті ж
 координати, що й відповідні їм точки на кадрі під номером \(i\). Якщо
 отримані координати не цілочисельні, їх можна округлити, що не матиме
 значного негативного впливу на якість результату.
 
 Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \ref{eq:h_matrix}.
-Візьмемо пару відповідних точок $T$ та $T'$:
-
-
-$T = ((x_1,y_1,1), (x_2,y_2,1), (x_3,y_3,1), (x_4,y_4,1))$,
-
-
-$T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
-
-Перепишемо \ref{eq:h_connection} у матричній формі для $T$ та $T'$:
+Візьмемо пару відповідних точок $T$ та $T'$: $T = ((x_1,y_1,1), (x_2,y_2,1), 
+(x_3,y_3,1), (x_4,y_4,1)), T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$.
+Перепишемо \ref{eq:h_connection} у матричній формі для $T$ та $T'$.
 
 \begin{equation}
     \begin{bmatrix}
@@ -56,7 +50,7 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
     \label{eq:h_connection2}
 \end{equation}
 
-Таким чином ми приходимо до розв'язку системи:
+Таким чином, ми приходимо до розв'язку системи
 \begin{equation*}
     \underbrace{
         \begin{bmatrix}
@@ -91,12 +85,12 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
         y'_2 \\
         y'_3 \\
         y'_4
-    \end{bmatrix}
+    \end{bmatrix}.
 \end{equation*}
 
-Варто відмітити, що ми потім  позбуваємось  $h_{33}$, щоб $H$ була нормованою, оскільки вона
-зв'язує точки площин, в яких 3-тя координата 1.
-У $A$ маємо 8 рівнянь, для знаходження параметрів яких потрібно, щоб $A$ була повноранговою.
+Варто відмітити, що ми потім позбуваємось $h_{33}$, щоб $H$ була нормованою, оскільки вона
+зв'язує точки площин, в яких 3-тя координата одиниця.
+У $A$ маємо 8 рівнянь, для знаходження параметрів яких, потрібно, щоб $A$ була повноранговою.
 Для отримання $H$ застосовується сингулярний розклад (SVD) матриці $А = U\Sigma V^*$.
 Після розкладу $V^*$ має розмір $9\times9$. Параметри $H$ знаходяться в останньому рядку $V^*$.
 
@@ -105,10 +99,9 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
     \label{eq:honography_svd}
 \end{equation}
 
-
-Для оцінки гомографії використовували RANSAC \cite{ransac}.
+Для оцінки гомографії використали принцип RANSAC \cite{ransac}.
 Користувач вводить рівень \(\varepsilon > 0\)
-дозволеної похибки розрахунків -- що менше, то краще, проте тим довше
+дозволеної похибки розрахунків ~---~ що менше, то краще, проте тим довше
 буде працювати алгоритм пошуку гомографії.
 
 \begin{equation}
@@ -126,27 +119,25 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
     \begin{algorithmic}
         \State \textbf{Вхід:} $M^{i,i+s}$ - множина відповідних точок, $\varepsilon$ та $n$ - кількість ітерацій
         \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії
-        \State $\forall i = \overline{1,n}:$
+        \State $\forall i = \overline{1,n}$
         \State \quad 1. Вибираємо випадковим чином 4 пари відповідних точок $T$ та $T'$ з $M^{i,i+s}$.
         \State \quad 2. Обчислюємо $H$ по формулі \ref{eq:honography_svd}
         \State \quad 3. Обчислюємо $E(H)$ по формулі \ref{eq:homography_estimation}
         \State \quad 4. Якщо  $E(H) < E(H^{best})$:
-        \State \quad \quad $H^{best} \gets H$
+        \State \qquad $H^{best} \gets H$
     \end{algorithmic}
 \end{algorithm}
-
 
 \subsection{Обробка ключових точок з маскою}
 
 Ключові точки (Рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT  ми
 використовуємо для оцінки гомографії, але також видаляємо ті ключові
 точки, які потрапляють в область маски рухомих об'єктів.
-Таким чином ми зменшуємо шанси того, що замість дошки алгоритм "зачепиться" за одяг
+Таким чином ми зменшуємо ймовірність того, що замість дошки алгоритм "зачепиться" за одяг
 викладача або інші рухомі об'єкти. На Рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
 існують точки, які насправді не належать рухомим об'єктам кадру
 \(F^{i + s}\), але були видалені. Це відбулось через те, що такі точки
-відповідають точкам з кадру \(F^{i}\) які в свою чергу лежать в межах маски рухомих
-об'єктів.
+відповідають точкам з кадру \(F^{i}\), які в свою чергу лежать в межах маски рухомих об'єктів.
 
 \begin{figure}[H]
     \centering
