--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -1,18 +1,17 @@
 \section{Створення панорамного знімку}
 
-
 Часто бувають ситуації, коли для запису лекції використовується камера з
 невисокою роздільною здатністю, через що виникає необхідність рухати
 камеру, тому написи, які були на дошці, перестають бути видимими для
 глядачів, які не встигли записати матеріал, що було тільки-но
-представлено. Рішенням цієї проблеми і проблем, пов'язаних з тремтінням
-камери, є побудова панорами , яка створюється шляхом склеювання
+представлено. Рішенням цієї проблеми і проблем пов'язаних з тремтінням
+камери ~---~ є побудова панорами, яка створюється шляхом склеювання
 та накладання кадрів з відео.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/panorama_example}
-    \caption{Приклад отриманої панорами з автоматичним видаленням
+    \caption{Приклад отриманої панорами з автоматичним видаленням 
     викладача з відео \cite{fpmi_2021_video}
     \label{fig:panorama_example}
     }
@@ -26,12 +25,10 @@
 \(h^{i} \geq h\).
 
 % \subsection{Склейка кадрів відео}
-
 % Для того щоб склеїти два кадри дошки застосовується базовий алгоритм 
 % поєднання двох знімків з використанням матриці гомографії та відповідних точок.
 % Нехай у нас на вхід є два зображення $I_1$ та $I_2$. Маємо матрицю гомографії 
 % переводу точок з $I_1$ та $I_2$ $H_{1}^{2}$
-
 
 \begin{algorithm}[H]
     \caption{Створення панорами}
@@ -112,55 +109,4 @@
     \label{al:panorama_creating_algorithm}
 \end{algorithm}
 
-\section{Створення слайдів з відео}
-
-Після видалення викладача та суміщення кадрів ми створюємо слайди у вигляді
-коротких нотаток відеозапису лекції. Ми по черзі беремо пари кадрів панорами, які
-необов'язково є сусідніми – для збільшення чутливості алгоритму створення нових
-слайдів можна використовувати кадри, різниця між індексами яких є більшою, тому що
-змін на дошці між сусідніми кадрами може не бути.
-
-
-\subsection{Порівняння слайдів}
-
-
-Ми використовуємо оператор Лапласа  для знаходження перепадів
-яскравості і зменшення рівня шуму. У наших експериментах саме цей
-оператор надав кращі результати, ніж інші диференціальні оператори
-
-\begin{equation*}
-L(x,y) = \nabla^{2}f(x,y) = \frac{\partial^{2}f(x,y)}{\partial x^{2}} + \frac{\partial^{2}f(x,y)}{\partial y^{2}}
-\end{equation*}
-
-Для одержання маски всіх написів на дошці застосовуємо метод бінаризації
-Оцу . Це швидкий алгоритм, який на наш погляд дає прийнятну
-якість бінаризації для створення слайдів (Рис. 5).
-
-Не кожна панорама є новим слайдом. Коли зміни на дошці невеликі
-(наприклад, лектор дописав формулу), треба лише оновити існуючий слайд.
-Якщо ж зміни значні (наприклад, лектор стер попередні записи), треба
-створити новий слайд і працювати з ним. Щоб мінімізувати недоліки маски
-та отримувати слайди з новою інформацією на дошці, ми виділяємо нові
-написи за допомогою оператора Лапласа.
-
-Слайд -- це та панорама \(W^{i}\), на якій відображено стан дошки
-напередодні стану з великою кількістю змін. Ми порівнюємо між собою не
-кожну панораму, а пропускаємо вказану користувачем кількість \(q\)
-панорам. Оскільки розміри слайду \(W^{i}\) і панорами
-\(W^{i + s \bullet q}\) можуть бути різними, треба враховувати це у
-процесі їх порівняння. Для цього розраховуємо горизонтальний зсув
-\(x_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( x_{\min}^{i + s \cdot j},0 \right)}\)
-і вертикальний зсув
-\(y_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( y_{\min}^{i + s \cdot j},0 \right)}\).
-Користувач вказує кількість змін \(t \in \lbrack 0;1\rbrack\) між
-слайдом та панорамою, яка є вирішальною для прийняття рішення щодо
-створення нового слайду. Нехай \(L^{i}\) та \(L^{i + s \cdot q}\)
-панорами після обробки оператором Лапласа панорам \(W^{i}\) та
-\(W^{i + s \cdot q}\) відповідно. Якщо виконується нерівність
-
-\begin{equation*}
-\sum_{(x,y) \in P^{i}}^{}| L^{i}(x,y) - L^{i + s \cdot q}( x - x_{\min}^{'i},y - y_{\min}^{'i} ) | > t \cdot | P^{i + s \cdot q} |
-\end{equation*}
-
-бінаризовану \(W^{i}\) та додаємо до списку слайдів, а в іншому випадку переходимо до
-перевірки слайду \(W^{i + s \cdot q}\).
+\clearpage
