Propose fixes for abstracts and preface
- Rephrase some sentences.
- Fix lexicon.
- Clarify the aim and results.
- Fix `mathbb` fonts by removal of redundant packages.

--- a/2_abstract/1_abstract_en.tex
+++ b/2_abstract/1_abstract_en.tex
@@ -18,14 +18,14 @@ which contains only the text from the board
 because such a view of the material is most
 like the compendium.
 
-The item of this work
+The aim of this work
 is creating an algorithm for obtaining panorama
 slides without a teacher from video lecture.
 
-To perform the study were used:
+To perform the study the following instruments were used:
 \begin{itemize}
   \item
-        SIFT method for obtaining image's keypoints;
+        SIFT for obtaining image's keypoints;
   \item
         homography for getting panorama slides;
   \item
@@ -39,5 +39,4 @@ To perform the study were used:
 
 Keywords:
 \MakeUppercase{images processing, intellectual video
-  processing, \\
-  video stabilization}
+  processing, video stabilization}
