--- a/3_preface/1_symbols.tex
+++ b/3_preface/1_symbols.tex
@@ -5,14 +5,13 @@
 
  \noindent$\mathbb{N}$~---~множина натуральних чисел; \\
  \noindent$\mathbb{R}$~---~множина дійсних чисел; \\
- \noindent$\mathbb{R}^n$~---~$n$-вимірний векторний простір дійсних чисел; \\
-\\
-\\
+ \noindent$\mathbb{R}^n$~---~$n$-вимірний векторний простір дійсних чисел. \\
+
 \textbf{Позначення, введені в дисертації}
 
  \noindent$F$~---~множина кадрів відео; \\
  \noindent$T$~---~довжина відео (кількість кадрів); \\
  \noindent$P$~---~множина координат пікселів зображення; \\
  \noindent$C$~---~множина інтенсивностей пікселів зображення; \\
- \noindent$F_p^i$~---~інтенсивність пікселя з координатою $p$$\in$$P$; \\
+ \noindent$F_p^i$~---~інтенсивність пікселя з координатою $p \in P$; \\
  Б-К алгоритм ~---~алгоритм Бойкова-Колмогорова. \\
