--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -6,25 +6,27 @@
 % технологій і систем НАН України та МОН України.
 
 \textbf{Актуальність роботи.}
-Задача створення конспекту лекцій не є новою, оскільки вже є
-роботи по даній темі. Вона стала ще більш актуально оскільки
-з масовим переходом навчання у віддалений режим
+Задача створення конспекту лекцій не є новою
+та стала ще більш актуальною,
+оскільки з масовим переходом навчання у віддалений режим навчання
 постала проблема створення якісних
 лекційних матеріалів, зокрема слайдів, які містять
-стислу суть занять. Було б добре мати технологію, що
-перетворюватиме відео лекцію у стисле слайд шоу, на
+стислу суть занять. Корисно мати технологію, що
+перетворює відео лекцію у стисле слайд шоу, на
 якому будуть написи з дошки без викладача і до того
 ж всю область дошки, навіть якщо камера
 рухалась. 
 
-Дана інформаційна технологія має мати ряд властивостей:
+Дана інформаційна технологія повинна мати ряд властивостей:
 \begin{itemize}
-      \item мобільність (працювати на звичайному смартфоні);
-      \item швидкість обробки відеозапису лекції;
-      \item якість (мати мінімальну кількість дефектів на слайдах, 
-      а саме викладача або не правильної склейки кадрів).
+      \item здатність працювати на звичайному смартфоні у режимі реального часу;
+      \item можливість працювати з дошками різного кольору;
+      \item можливість працювати з рухливою камерою;
+      \item мінімальна кількість дефектів на слайдах,
+        таких як наявність фрагментів викладача
+        або видимі шви у місцях склейки кадрів.
 \end{itemize}
-На даний час жодний аналог не може такого дати, тому була поставлена
+На поточний момент жоден аналог не може такого дати, тому була поставлена
 задача створити таку технологію.
 
 \textbf{Мета і завдання дослідження.}
@@ -62,7 +64,9 @@
 \textbf{Наукова новизна одержаних результатів.}
 
 Створено алгоритм та реалізовано інформаційну технологію
-для одержання панорамних слайдів з відеозапису лекції.
+для одержання панорамних слайдів з відеозапису лекції,
+який створено за допомогою рухливої камери,
+а дошку час від часу перекриває викладач та інші люди.
 
 \textbf{Практичне значення одержаних результатів.}
 
