--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -30,7 +30,7 @@
   \item
         згорткові нейронні мережі для детекції людини;
   \item
-        Оператори знешумлення та бінаризації зображень.
+        оператори знешумлення та бінаризації зображень.
 \end{itemize}
 
 Ключові слова:
