--- a/4_analogs/3_conclusion.tex
+++ b/4_analogs/3_conclusion.tex
@@ -1,13 +1,17 @@
 \chapterConclusion
 
-Як ми бачимо, всі вищеописані алгоритми є частковими (не повністю вирішують проблеми
-з оцифруванням дошки): деякі методи обробляють тільки написи з дошки, 
-причому досить непогано; частина аналогів створюють панорамні знімки тільки з фотографій дошки.
+Як ми бачимо, всі вищеописані алгоритми не повністю вирішують поставлену нами задачу
+оцифрування дошки: деякі методи обробляють тільки написи з дошки,
+частина аналогів створює панорамні знімки тільки з фотографій дошки.
 Спільними елементами вищеописаних аналогів є використання 
 темпорального медіанного фільтру для видалення рухомих об'єктів.
-У даній роботі даний метод теж має місце, але вже для знешумлення
+У поточній роботі даний метод теж має місце, але вже для знешумлення
 вихідних слайдів, а не для видалення лектора з відео.
-Найбільшими недоліками всіх аналогів є час обробки відео. Більшість технологій
-тестувались на відео поганої якості, наприклад 240р - 720р. 
+Найбільшими недоліками всіх аналогів є час обробки відео.
+Більшість технологій тестувалась на відео з низькою роздільною здатністю
+від $352\times240$ до $1280\times720$,
+хоча сучасні недорогі смартфони дозволяють записувати відео
+розмірами $1920\times1080$, а більш дорогі моделі навіть $3840\times2160$,
+що помітно позначиться на швидкодії існуючих алгоритмів.
 Також жодний аналог не пропонує створювати панорамні знімки по мірі руху камери під
 час зйомки.
