Refactor the second section
Refrase sentences, fix grammar

--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -2,15 +2,15 @@
 
 
 У даній роботі описується алгоритм напівавтоматичного
-створення слайдів на основі відеозапису лекції (Рис. \ref{fig:pipeline}).
+створення слайдів на основі відеозапису лекції (рис. \ref{fig:pipeline}).
 За допомогою наведеного алгоритму можна обробляти відео
 у режимі реального часу, адже кожна його ітерація потребує
 лише поточний на попередні кадри. Між кожною парою
 сусідніх кадрів відео розраховується бінарна маска областей, де
-потенційно знаходяться рухомі об'єкти або викладач в залежності від методу
-створення маски.
+потенційно знаходяться рухомі об'єкти або викладач
+(в залежності від методу створення маски).
 
-Ті частини зображення, де не було помічено рух або людина,
+Ті частини зображення, де не було помічено руху або людини,
 зберігаються до зображення, яке ми в даній роботі називаємо панорамою, тому що
 це зображення може розширюватись у випадку, коли камера рухається
 навмисно або хитається через небажаний вплив на неї.
@@ -18,13 +18,13 @@
 попередніх кроках, і створюємо новий слайд, якщо було помічено
 достатню кількість змін.
 
-Інформаційна технологія, що реалізує даний алгоритм, працює у
+Інформаційна технологія, що реалізує описаний алгоритм, працює у
 напівавтоматичному режимі ~---~ вона потребує від користувача введення
 деяких параметрів, а саме:
 \begin{enumerate}
-    \item крок або кількість кадрів між тими, які беруться в обробку;
-    \item ступінь згладжування маски рухомих об'єктів для алгоритму Бойкова-Колмогорова;
-    \item рівень довіри присутності людини для згорткових мереж;
+    \item крок або кількість кадрів між тими кадрами, які беруться в обробку;
+    \item ступінь згладжування маски рухомих об'єктів у випадку використання алгоритму Бойкова-Колмогорова;
+    \item рівень довіри присутності людини у випадку використання згорткових мереж;
     \item крок між панорамами для перевірки необхідності створення нового панорамного слайду;
     \item кількість необхідних змін між двома панорамами для створення нового слайду.
 \end{enumerate}
@@ -58,27 +58,27 @@
 \end{figure}
 \section{Вхід алгоритму}
 Для опису алгоритму створення панорамних слайдів потрібно визначити та
-описати об'єкти з якими взаємодіє інформаційна технологія.
+описати об'єкти, з якими взаємодіє інформаційна технологія.
 
-Дошка ~----~ це плоска поверхня, яку знімає камера. Це може бути крейдяна
+Дошка ~---~ це плоска поверхня, яку знімає камера. Це може бути крейдяна
 дошка, маркерна дошка, стіна тощо.
 
 Записи ~---~ це ті місця дошки, де відбулася зміна кольору, яка тривала
 відносно довгий час. Важливо зауважити, що ці записи мають бути
-саме у площині дошки, при чому людина, яка проходить біля неї, не вважається
+саме у площині дошки, причому людина, яка проходить біля неї, не вважається
 зміною кольору, оскільки цей рух був не тривалим.
 
 В область огляду камери має потрапляти дошка або її частина. Наведений
 алгоритм не розрахований на відео, що містить декілька дошок, які знаходяться
-не в одній плоскій площині. Камера, що знімає це відео, може рухатись, проте
-чим більше вона нерухома ~---~ тим краще (алгоритм не буде працювати, якщо камера
+не в одній плоскій площині. Камера, що знімає відео, може рухатись, проте
+чим більше вона нерухома, тим краще (алгоритм не буде працювати, якщо камера
 рухається постійно). Дошка на відео може перекриватися сторонніми об'єктами,
 проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих
-об'єктів їх помічав та для подальшого оновлення написів на дошці.
+об'єктів їх не додавав до слайдів.
 
 Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення
-$P \to C$, де $P$ ~---~ множина координат пікселів, $С$ ~---~ скінченна множина можливих рівнів
-яскравостей (інтенсивностей) пікселів.
+$P \to C$, де $P$ ~---~ множина координат пікселів, $C$ ~---~ скінченна множина можливих рівнів
+яскравостей (інтенсивностей) пікселів
 \begin{equation*}
     P = [1, \ldots ,w]\times[1, \ldots, h], C \subset R
 \end{equation*}
