--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -1,39 +1,35 @@
 \section{Постановка задачі}
 
-Головна ціль даної роботи ~---~ це створення власної інформаційної технології
-на вхід якої буде даватись відеозапис лекції, а на вихід панорамні слайди
+Головна ціль даної роботи ~---~ це створення власної інформаційної технології,
+на вхід якої буде подаватись відеозапис лекції, а на вихід панорамні слайди
 без викладача.
-
 Для одержання бажаних результатів було запропоновано
 вирішити такі проблеми:
 \begin{enumerate}
 	\item
-	      Стабілізація кадрів.\\
+	      Стабілізація кадрів.
 	      Багато відео лекцій записуються не в найкращих умовах.
-	      Камера може випадково затруситися, якщо її прикріпити до столу
-	      де студенти пишуть лекцію, або закріплена не стабільно, таким чином
-	      це заважає нормально слухати лекцію і фокусуватись на написах дошки.
-
+	      Камера може випадково затруситися, якщо її прикріпити до столу,
+	      де студенти пишуть лекцію, або може бути нестабільно закріплена.
+          Трясіння відео може заважати сприймати лекцію і фокусуватись на написах дошки.
 	\item
-	      Прибирання викладача.\\
-	      Також однією із задач є видалення викладача з відео, оскільки
-	      було поставлено за мету надавати користувачу чисті написи з дошки.
-	      Є чимало методів як вирішувати цю задачу. Можна локалізувати тільки
+	      Прибирання викладача.
+	      Є чимало методів вирішення цієї задачі. Можна локалізувати тільки
 	      людину, а можна і всі об'єкти, що рухаються в площині дошки. Маючи
-	      дані про положення в кадрі викладача, ми матимемо змогу оновлювати
+	      дані про положення викладача в кадрі, ми матимемо змогу оновлювати
 	      з часом інформацію з дошки, яка була тимчасово перекрита.
 
 	\item
-	      Створення панорамних слайдів.\\
-	      Часто, коли дошки сильно об'ємні по площі камера знімає тільки ту частину де
+	      Створення панорамних слайдів.
+          Часто, коли дошки мають значну площу, камера знімає тільки ту частину, де
 	      викладач щось пише. Під час лекції камеру переміщують так, щоб лектор був завжди
 	      в полі зору. Таким чином, якщо студент не встиг переписати все з однієї частини
-	      дошки, а камеру перемістили, то учень втрачає частину інформації. Було б добре
-	      мати слайди, які по мірі руху камери містили всю дошку.
+	      дошки, а камеру перемістили, втрачається частина інформації. Тому корисно
+	      мати слайди, які по мірі руху камери містять всю дошку.
 
 	\item
-	      Оцифровування написів. \\
-	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми ~---~ все це сильно впливає
-	      на сприйняття лекційного матеріалу. Непогано було б мати бінаризовані слайди без
-	      шумів тільки з написами як в записнику.
+	      Оцифровування написів.
+	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми ~---~ все це впливає
+          на сприйняття лекційного матеріалу. Корисно мати бінаризовані слайди,
+          які містять лише написи як в записнику.
 \end{enumerate}
