Refactor the third section
- Fix grammar, lexicon and style
- Add ability to use bold `1` with `\mathds{1}`

--- a/6_mask/1_preface.tex
+++ b/6_mask/1_preface.tex
@@ -1,4 +1,5 @@
-Третій розділ присвячено опису методів отримання маски людини та маски
-рухомих об'єктів, щоб у подальшому прибрати викладача з панорамних знімків.
+Третій розділ присвячено опису методів визначення області,
+де знаходиться людина або рухомі об'єкти,
+щоб у подальшому прибрати викладача з панорамних знімків.
 Описано будову алгоритму Бойкова-Колмогорова та згорткових мереж 
 YOLO, MobileNet, SSD, R-СNN.
