--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -12,8 +12,8 @@
 відповідає одиниця, а іншим відповідає нуль.
 \end{definition}
 
- Для обраного користувачем
-кроку \(s > 0\) на двох кадрах \(F^{i}\) і \(F^{i + s}\) рухомі об'єкти
+Для обраного користувачем
+кроку $s \in \mathbb{N}$ на двох кадрах \(F^{i}\) і \(F^{i + s}\) рухомі об'єкти
 являють собою підмножину пікселів, колір яких було змінено більше, ніж
 на певне значення, з урахуванням зміни кольорів у сусідніх пікселях.
 Тобто, якщо рухомий об'єкт складається з одного пікселя, його рух може
@@ -46,44 +46,37 @@
   \end{figure}
 
 Для того, щоб видалити всі рухомі об'єкти, які можуть перекривати дошку, ми
-беремо кадри \(F^{i}\) та \(F^{i + s}\)  ( Рис. \ref{fig:yakovlev:bk_examples},
+беремо кадри \(F^{i}\) та \(F^{i + s}\) (рис. \ref{fig:yakovlev:bk_examples},
 \subref{fig:yakovlev:bk_examples:a},
 \subref{fig:yakovlev:bk_examples:b}) та для
 кожної пари кольорів пікселів \(p\) з однаковими координатами знаходимо
 модуль \(D_{p}^{i} = \left| F_{p}^{i} - F_{p}^{i + s} \right|\) різниці
-інтенсивностей (Рис. \ref{fig:yakovlev:bk_examples:c}). Зображення \(D^{i}\) подаємо на вхід
+інтенсивностей (рис. \ref{fig:yakovlev:bk_examples:c}). Зображення \(D^{i}\) подаємо на вхід
 Б-К алгоритму.
 
 Знайдемо маску $B^{i}:P \rightarrow \{0,1\}$ рухомих
 об'єктів для кадрів \(F^{i}\) і \(F^{i + s}\).
 Введемо функції.
-\begin{equation*}
-	q_{p}(B_{p}^{i}) =
-	\begin{gathered}
-		\begin{cases}
-			\alpha D_{p}^{i}, & якщо\ B_{p}^{i} = 0 \\
-			255 - D_{p}^{i},  & якщо\ B_{p}^{i} = 1 
-		\end{cases}
-	\end{gathered}
-\end{equation*}
-
-\begin{equation*}
-	g(B_{p}^{i},B_{p'}^{i}) = \beta|B_{p}^{i} - B_{p'}^{i}|
-\end{equation*}
-де \(\alpha\) та \(\beta\) -- параметри згладжування маски, що задаються
+\begin{align*}
+    &q_{p}(B_{p}^{i}) =
+      \begin{cases}
+        \alpha D_{p}^{i}, & \textit{якщо} B_{p}^{i} = 0, \\
+        255 - D_{p}^{i},  & \textit{якщо} B_{p}^{i} = 1 ,
+      \end{cases} \\
+    &g(B_{p}^{i},B_{p'}^{i}) = \beta|B_{p}^{i} - B_{p'}^{i}|,
+\end{align*}
+де \(\alpha\) та \(\beta\)~---~параметри згладжування маски, що задаються
 користувачем інформаційної технології. Позначимо множину
 $\Gamma \subset P^{2}$ сусідніх пікселів. У даній роботі сусідніми до
 пікселя \(p \in P\) вважаються пікселі з множини
 \(\left\{ \left( p_{x + 1},p_{y} \right),\left( p_{x},p_{y + 1} \right) \right\} \cap P\).
 Сформулюємо пошук маски \(B^{i}\) у вигляді задачі мінімізації виразу
-
 \begin{equation*}
-	E\left( B_{p}^{i} \right) = \sum_{p \in P}^{}{q_{{p\ }}( B_{p}^{i}) +}\sum_{(p,p') \in \Gamma}^{}g(B_{p}^{i},B_{p'}^{i})
+    E\left( B_{p}^{i} \right) = \sum_{p \in P}^{}{q_{{p\ }}( B_{p}^{i}) +}\sum_{(p,p') \in \Gamma}^{}g(B_{p}^{i},B_{p'}^{i}).
 \end{equation*}
-На виході отримуємо маску \(B_{p}^{i}\) рухомих об'єктів (Рис.
+На виході отримуємо маску \(B_{p}^{i}\) рухомих об'єктів (рис.
 \ref{fig:yakovlev:bk_examples:d}).
 Її ми використовуємо, щоб не переносити на фінальне зображення ті
 пікселі, на яких було помічено рух, адже зміна яскравості пікселя
 виникає не тільки під час створення напису, а й під час тимчасового
 затуляння дошки.
-
