--- a/index.tex
+++ b/index.tex
@@ -23,6 +23,9 @@
 % for indicator brackets
 \usepackage{stmaryrd}
 
+% for \mathbds{1}
+\usepackage{dsfont}
+
 \theoremstyle{definition}
 \newtheorem{definition}{Означення}
 
