Refactor the fourth section
Fix grammar, lexicon and style

--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -1,6 +1,6 @@
-\section{Знаходження гомографії за допомогою RANSAC}
+\section{Знаходження матриці гомографії за допомогою RANSAC}
 
-Гомографія ~---~ матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні.
+Матриця гомографії ~---~ матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні.
 
 \begin{equation}
     H =
@@ -16,7 +16,7 @@
     H^{i} \cdot p_{j}^{i + s} = c \cdot p_{j}^{i},\quad\forall i = \overline{1,4\ }
     \label{eq:h_connection}
 \end{equation}
-Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої гомографії
+Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої матриці
 \(H^{i}\). Цю матрицю можна використати для компенсації руху камери
 ~---~ ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
 чого точки зображення, отриманого в результаті перетворення, мають ті ж
@@ -28,7 +28,6 @@
 Візьмемо пару відповідних точок $T$ та $T'$: $T = ((x_1,y_1,1), (x_2,y_2,1), 
 (x_3,y_3,1), (x_4,y_4,1)), T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$.
 Перепишемо \ref{eq:h_connection} у матричній формі для $T$ та $T'$.
-
 \begin{equation}
     \begin{bmatrix}
         x'_i\lambda \\
@@ -49,8 +48,7 @@
     ,\quad\forall i,j = \overline{1,4\ }
     \label{eq:h_connection2}
 \end{equation}
-
-Таким чином, ми приходимо до розв'язку системи
+приходимо до розв'язку системи
 \begin{equation*}
     \underbrace{
         \begin{bmatrix}
@@ -87,10 +85,9 @@
         y'_4
     \end{bmatrix}.
 \end{equation*}
-
 Варто відмітити, що ми потім позбуваємось $h_{33}$, щоб $H$ була нормованою, оскільки вона
 зв'язує точки площин, в яких 3-тя координата одиниця.
-У $A$ маємо 8 рівнянь, для знаходження параметрів яких, потрібно, щоб $A$ була повноранговою.
+У $A$ маємо 8 рівнянь, для знаходження параметрів яких потрібно, щоб $A$ була повноранговою.
 Для отримання $H$ застосовується сингулярний розклад (SVD) матриці $А = U\Sigma V^*$.
 Після розкладу $V^*$ має розмір $9\times9$. Параметри $H$ знаходяться в останньому рядку $V^*$.
 
@@ -102,15 +99,14 @@
 Для оцінки гомографії використали принцип RANSAC \cite{ransac}.
 Користувач вводить рівень \(\varepsilon > 0\)
 дозволеної похибки розрахунків ~---~ що менше, то краще, проте тим довше
-буде працювати алгоритм пошуку гомографії.
-
+буде працювати алгоритм пошуку матриці гомографії
 \begin{equation}
     E(H) = \sum_{(x,x') \in M^{i,i+s}}
-    \llbracket \|
+    \left\llbracket \|
     \frac{H\cdot x'}{(H\cdot x')_z} - x
     \Vert \leq \varepsilon
-    \rrbracket
-    \to \max\limits_{\substack{H \in \mathbb{R}^{3 \times 3} \\ \det{H} \neq 0}}
+    \right\rrbracket
+    \to \max\limits_{\substack{H \in \mathbb{R}^{3 \times 3} \\ \det{H} \neq 0}}.
     \label{eq:homography_estimation}
 \end{equation}
 
@@ -121,8 +117,8 @@
         \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії
         \State $\forall i = \overline{1,n}$
         \State \quad 1. Вибираємо випадковим чином 4 пари відповідних точок $T$ та $T'$ з $M^{i,i+s}$.
-        \State \quad 2. Обчислюємо $H$ по формулі \ref{eq:honography_svd}
-        \State \quad 3. Обчислюємо $E(H)$ по формулі \ref{eq:homography_estimation}
+        \State \quad 2. Обчислюємо $H$ по формулі \eqref{eq:honography_svd}
+        \State \quad 3. Обчислюємо $E(H)$ по формулі \eqref{eq:homography_estimation}
         \State \quad 4. Якщо  $E(H) < E(H^{best})$:
         \State \qquad $H^{best} \gets H$
     \end{algorithmic}
@@ -130,10 +126,10 @@
 
 \subsection{Обробка ключових точок з маскою}
 
-Ключові точки (Рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT  ми
+Ключові точки (Рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT, ми
 використовуємо для оцінки гомографії, але також видаляємо ті ключові
 точки, які потрапляють в область маски рухомих об'єктів.
-Таким чином ми зменшуємо ймовірність того, що замість дошки алгоритм "зачепиться" за одяг
+Таким чином ми зменшуємо ймовірність того, що замість дошки алгоритм ``зачепиться'' за одяг
 викладача або інші рухомі об'єкти. На Рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
 існують точки, які насправді не належать рухомим об'єктам кадру
 \(F^{i + s}\), але були видалені. Це відбулось через те, що такі точки
