--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -4,8 +4,8 @@
 невисокою роздільною здатністю, через що виникає необхідність рухати
 камеру, тому написи, які були на дошці, перестають бути видимими для
 глядачів, які не встигли записати матеріал, що було тільки-но
-представлено. Рішенням цієї проблеми і проблем пов'язаних з тремтінням
-камери ~---~ є побудова панорами, яка створюється шляхом склеювання
+представлено. Рішенням цієї та інших пов'язаних з тремтінням
+камери проблем є побудова панорами, яка створюється шляхом склеювання
 та накладання кадрів з відео.
 
 \begin{figure}[H]
