--- a/7_panorama/5_conclusion.tex
+++ b/7_panorama/5_conclusion.tex
@@ -1,6 +1,6 @@
 \chapterConclusion
 
 Було розглянуто алгоритм знаходження ключових точок SIFT.
-Показано як знаходити найкращу матрицю гомографії за 
-принципом RANSAC. Побудований кінцевий алгоритм створення
+Показано, як знаходити найкращу матрицю гомографії за 
+допомогою RANSAC. Побудовано кінцевий алгоритм створення
 панорамного знімку без викладача.
