Refactor the fifth section
Fix grammar, lexicon and style. Remove wrong example

--- a/8_slides/1_preface.tex
+++ b/8_slides/1_preface.tex
@@ -1,3 +1,4 @@
-У  п'ятому розділі описується процес прийняття рішення чи брати панорамний знімок як слайд, чи ні. 
+У  п'ятому розділі описується процес прийняття рішення щодо того,
+чи брати панорамний знімок як слайд, чи ні. 
 Також наводиться приклад роботи оператору Лапласа та робиться огляд швидкої медіани для
 зменшення шуму.
