--- a/8_slides/3_fast_median.tex
+++ b/8_slides/3_fast_median.tex
@@ -6,7 +6,7 @@
     Накопичувальна сума масиву \cite{integral_image} $X$~---~це масив, кожний елемент якого є сумою всіх попередніх.
 \end{definition}
 
-Наведемо ітеративну формулу обчислення накопичувальної суми
+Наведемо рекуррентну формулу обчислення накопичувальної суми
 \begin{equation}
     S_1 = a_1, \qquad S_n = a_n + S_{n-1}.
     \label{eq:summed_table_formula}
@@ -21,13 +21,13 @@
 \begin{definition}
     Темпоральною медіаною у комп'ютерному зорі називають зображення,
     в кожному пікселі якого знаходиться медіанне значення, що знайдене між значеннями пікселів у часовому проміжку
-    (Рис. \ref{fig:temporal_median_example_1}).
+    (рис. \ref{fig:temporal_median_example_1}).
 \end{definition}
 
 Темпоральну медіану застосовують у комп'ютерному зорі для отримання
 фону сцени у відео \cite{temporal_median_example_1}.
 Тобто всі об'єкти, що рухаються, зникають на медіанному зображенні
-(Рис. \ref{fig:temporal_median_example_1}).
+(рис. \ref{fig:temporal_median_example_1}).
 Розрахунок темпоральної медіани складається з наступних кроків:
 \begin{enumerate}
     \item береться набір кадрів деякого часовому проміжку;
@@ -45,15 +45,6 @@
 \end{figure}
 Даний метод можна застосовувати як для прибирання швидких рухомих об'єктів,
 так і для  отримання зображення із високою роздільною здатністю (super-resolution).
-На рис. \ref{fig:temporal_median_example_2} м'яч  стає досить чітким.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.6\textwidth]{images/temporal_median_example_2}
-    \caption{Приклад розв'язання задачі super-resolution \cite{temporal_median_example_2}
-        \label{fig:temporal_median_example_2}
-    }
-\end{figure}
 
 \section{Швидка медіана для зображень}
 
@@ -120,7 +111,7 @@
         \label{fig:median_seq_example}
     }
 \end{figure}
-Для простішого пояснення методу швидкої медіани, візьмемо одноканальне зображення 
+Для простішого пояснення методу швидкої медіани візьмемо одноканальне зображення 
 зображення у відтінках сірого розмірами $h \times w$, де $h$ ~---~ висота, $w$ ~---~ ширина, 
 але в реальності операції, що наведені нижче виконуються для трьохканального $RGB$ зображення 
 окремо для кожного каналу.
