--- a/8_slides/4_conclusion.tex
+++ b/8_slides/4_conclusion.tex
@@ -1,5 +1,5 @@
 \chapterConclusion
 
-Запропонований метод прийняття рішення щодо того, чи обирати панорамний знімок як слайд ,чи ні.
+Запропоновано метод прийняття рішення щодо того, чи обирати панорамний знімок як слайд, чи ні.
 Оглянуто теоретичне підґрунтя темпоральної медіани для 
 знешумлення так покращення якості панорамних знімків.
