--- a/8_slides/2_slides_creating.tex
+++ b/8_slides/2_slides_creating.tex
@@ -1,9 +1,9 @@
 \section{Порівняння слайдів}
 
-Після видалення викладача та суміщення кадрів, ми створюємо слайди у вигляді
+Після видалення викладача та суміщення кадрів ми створюємо слайди у вигляді
 коротких нотаток лекції. Ми по черзі беремо пари кадрів панорами, які
-необов'язково є сусідніми – для збільшення чутливості алгоритму створення нових
-слайдів можна використовувати кадри, різниця між індексами яких є більшою, тому що
+необов'язково є сусідніми~---~для збільшення чутливості алгоритму створення нових
+слайдів можна використовувати кадри, різниця між індексами яких є більшою, бо
 змін на дошці між сусідніми кадрами може не бути.
 
 Ми використовуємо оператор Лапласа  для знаходження перепадів
@@ -11,7 +11,7 @@
 оператор надав кращі результати, ніж інші диференціальні оператори
 
 \begin{equation*}
-L(x,y) = \nabla^{2}f(x,y) = \frac{\partial^{2}f(x,y)}{\partial x^{2}} + \frac{\partial^{2}f(x,y)}{\partial y^{2}}
+  L(x,y) = \nabla^{2}f(x,y) = \frac{\partial^{2}f(x,y)}{\partial x^{2}} + \frac{\partial^{2}f(x,y)}{\partial y^{2}}.
 \end{equation*}
 
 Для одержання маски всіх написів на дошці застосовуємо метод бінаризації
@@ -29,20 +29,18 @@ L(x,y) = \nabla^{2}f(x,y) = \frac{\partial^{2}f(x,y)}{\partial x^{2}} + \frac{\p
 напередодні стану з великою кількістю змін. Ми порівнюємо між собою не
 кожну панораму, а пропускаємо вказану користувачем кількість \(q\)
 панорам. Оскільки розміри слайду \(W^{i}\) і панорами
-\(W^{i + s \bullet q}\) можуть бути різними, треба враховувати це у
+\(W^{i + s \cdot q}\) можуть бути різними, треба враховувати це у
 процесі їх порівняння. Для цього розраховуємо горизонтальний зсув
-\(x_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( x_{\min}^{i + s \cdot j},0 \right)}\)
+$$x_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( x_{\min}^{i + s \cdot j},0 \right)}$$
 і вертикальний зсув
-\(y_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( y_{\min}^{i + s \cdot j},0 \right)}\).
+$$y_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( y_{\min}^{i + s \cdot j},0 \right)}.$$
 Користувач вказує кількість змін \(t \in \lbrack 0;1\rbrack\) між
 слайдом та панорамою, яка є вирішальною для прийняття рішення щодо
-створення нового слайду. Нехай \(L^{i}\) та \(L^{i + s \cdot q}\)
-панорами після обробки оператором Лапласа панорам \(W^{i}\) та
+створення нового слайду. Нехай \(L^{i}\) та \(L^{i + s \cdot q}\)~---~
+панорами, отримані в результаті обробки оператором Лапласа панорам \(W^{i}\) та
 \(W^{i + s \cdot q}\) відповідно. Якщо виконується нерівність
-
 \begin{equation*}
-\sum_{(x,y) \in P^{i}}^{}| L^{i}(x,y) - L^{i + s \cdot q}( x - x_{\min}^{'i},y - y_{\min}^{'i} ) | > t \cdot | P^{i + s \cdot q} |
+\sum_{(x,y) \in P^{i}}^{}| L^{i}(x,y) - L^{i + s \cdot q}( x - x_{\min}^{'i},y - y_{\min}^{'i} ) | > t \cdot | P^{i + s \cdot q} |,
 \end{equation*}
-
 бінаризовану \(W^{i}\) та додаємо до списку слайдів, а в іншому випадку переходимо до
 перевірки слайду \(W^{i + s \cdot q}\).
